Add examples for Pulsar Schema and Avro generated classes